web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__select__excluding-columns__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from tracks\nselect {track_id, title, composer, bytes}\nselect !{title, composer}\n"
snapshot_kind: text
---
SELECT
  track_id,
  bytes
FROM
  tracks
