web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__select__excluding-columns__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from artists\nderive nick = name\nselect !{artists.*}\n"
---
SELECT
  name AS nick
FROM
  artists

