web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__select__excluding-columns__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.bigquery\nfrom tracks\nselect !is_compilation\n"
---
SELECT
  NOT is_compilation
FROM
  tracks

